Fix Language-Team header in pot

--- a/languages/zionbuilder.pot
+++ b/languages/zionbuilder.pot
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Zionbuilder 1.0.0\n"
 "Report-Msgid-Bugs-To: https://github.com/zionbuilder/zionbuilder/issues/new/choose\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Hogash <hello@hogash.com>\n"
+"Language-Team: ZionBuilder <hello@zionbuilder.io>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
