--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@zionbuilder/i18n",
   "version": "1.0.0",
-  "main": "src/index.ts",
+  "main": "src/index",
   "author": "zionbuilder.io",
   "license": "MIT"
 }
