--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionbuilder/i18n",
-  "version": "1.0.0",
+  "version": "1.0.2-alpha.0",
   "main": "src/index",
   "author": "zionbuilder.io",
   "license": "MIT"
