Fixed setting border size to 0 without px not generating css
Fixes https://github.com/zionbuilder/zionbuilder/issues/496

--- a/languages/zionbuilder.pot
+++ b/languages/zionbuilder.pot
@@ -3357,7 +3357,7 @@ msgid "Show dots"
 msgstr ""
 
 #: ../includes/Elements/ImageSlider/ImageSlider.php:129
-msgid "Infinte"
+msgid "Infinite"
 msgstr ""
 
 #: ../includes/Elements/ImageSlider/ImageSlider.php:139
